src/test/resources/public/input/typechecking/fail/my_test_cases/double_decl.jova
class Tmp {

}

class Test {
    private Tmp tmp;

    public int fortyTwo(int test) {
        bool tmp;
        String test;

        return 42;
    }

    public int fortyOne(int test, bool test, int test) {
        bool test;

        return 0;
    }

    public int fortyOne(int test, bool test, int test) {
        return 0;
    }
}

